--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /Lab-6_JosueVidalCC/nbproject/private/
+/Lab-6_JosueVidalCC/build/
