--- a/Lab-6_JosueVidalCC/nbproject/project.properties
+++ b/Lab-6_JosueVidalCC/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lab.pkg6_josuevidalcc.Lab6_JosueVidalCC
+main.class=lab6_Jvidal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
